# DeepLearning

./: 01-mlp-loan-prediction.py  first-perceptron.py  main.py  pyproject.toml
notebooks/: first-perceptron.ipynb
notebooks/.ipynb_checkpoints/: 01-mlp-loan-predictions-checkpoint.ipynb
