[project]
name = "practicals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastexcel>=0.18.0",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.2",
    "marimo>=0.19.4",
    "matplotlib>=3.10.8",
    "polars[openpyxl]>=1.37.1",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
